Actualizacion hecha por Isaac, para conectar la DB con NetBeans y sus tablas.